<resources>
    <string name="app_name">Prime Video</string>
    <string name="download">Download</string>
    <string name="no_videos_downloaded">No videos Downloaded</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_with_your_mobile_number">Sign up with your mobile number</string>
    <string name="name">Name</string>
    <string name="mobile_number_or_email">Mobile number or Email</string>
    <string name="create_a_password">Create a password</string>
    <string name="show_passwords">ShowPassword</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="message_and_data_charges_may_apply">Message and Data charges may apply</string>
    <string name="by_continuing_you_agree_to_amazon_s_conditions_of_n_use_and_privacy_notice">By continuing,you agree to Amazon\'s Conditions of \n Use and Privacy NOtice.</string>
    <string name="downloads">downloads</string>
    <string name="downloadss">Downloads</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movieDesc">Toofan is based on a story idea by Farhan Akhtar and Anjum Rajabali\'s screenplay. The early portions of the Amazon Prime Video release are fleet and fun, if deeply familiar. Aziz\'s encounter with Ananya leads to an old-fashioned romance, filled with idealism, tenderness and Shankar-Ehsaan-Loy songs</string>
    <string name="popular_season">Popular Season</string>
    <string name="sign_ins">Sign-In</string>
    <string name="email_phone_for_mobile_accounts">Email(phone for mobile Accounts</string>
    <string name="amazon_password">Amazon Password</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="longpara">By continuing,you agree to Amazon\'s Conditions of \n Use and Privacy NOtice.</string>
    <string name="new_to_amazon">New to Amazon?</string>
    <string name="create_a_new_amazon_account">Create a new Amazon account</string>
    <string name="popular_shows">Popular Shows</string>
    <string name="top_movies">Top movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="prime">prime</string>
    <string name="included_with_prime">included with Prime</string>
    <string name="watch_now">Watch Now</string>
    <string name="watchlist">Watchlist</string>
    <string name="director_name">Director Name</string>
    <string name="more_options">More Options</string>
    <string name="share">Share</string>
    <string name="fight_club">Fight Club</string>
    <string name="trailer">Trailer</string>
    <string name="language_hindi_english">Language: Hindi,English</string>
    <string name="_2019_164min_14">2019 164min 14+</string>
    <string name="imdb_8_4">IMDb 8.4</string>
    <string name="related_movies">Related Movies</string>
    <string name="video_id">0m4BNIPB7WU</string>
    <string name="indian_toons">Indian Toons</string>
    <string name="search">Search</string>
    <string name="browse_by">Browse by</string>
    <string name="movies">Movies</string>
    <string name="amazon_originals">Amazon Originals</string>
    <string name="tv">TV</string>
    <string name="kids">Kids</string>
    <string name="genres">Genres</string>
    <string name="searched_movies">Searched Movies</string>
    <string name="you_don_t_have_any_watchlist">You don\'t have any watchlist</string>
    <string name="login_name">Login Name</string>
    <string name="aditya">Aditya</string>
    <string name="settings">Settings</string>
    <string name="stream_amp_download"><![CDATA[Stream & download]]></string>
    <string name="manage_internet_or_wifi">Manage internet or Wifi</string>
    <string name="parental_control">Parental Control</string>
    <string name="control_what_you_can_watch">Control what you can watch</string>
    <string name="registered_device">Registered Device</string>
    <string name="see_all_registered_device">See all Registered device</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="notifications">Notifications</string>
    <string name="on">On</string>
    <string name="auto_play">Auto Play</string>
    <string name="play_the_next_episode_automatically">play the next episode automatically</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="drama_tv_shows">Drama Tv Shows</string>
    <string name="tv_shows_you_will_like">Tv Shows You Will Like</string>
    <string name="kids_and_family_tv_show">Kids And Family Tv Show</string>
    <string name="thriller_shows">Thriller shows</string>
    <string name="action_and_adventure">Action and Adventure</string>
    <string name="perfect_movies">Perfect Movies</string>
    <string name="watch_in_your_language">Watch in Your Language</string>
    <string name="mirzapur">Mirzapur</string>
    <string name="the_good_doctor">The Good Doctor</string>
    <string name="search_by_moods">Search By Moods</string>
    <string name="comedy">Comedy</string>

</resources>