<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Fragments.FragmentMyStuff">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/loginimage"
            android:background="#216bd6"
            android:src="@drawable/ic_baseline_person_24" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/LoginName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/profileImage"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:drawablePadding="20dp"
        android:text="@string/aditya"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Btntosettings"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_baseline_settings_24"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvWatchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/watchlist"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tvWatchlist"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/you_don_t_have_any_watchlist"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>